# Time_to_shop

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  QUICKSTART.md  Query.sql  README.md  TTS Backup.ipynb  Time To Shop (90 Days).ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  scorer.py
config/: config.yaml
legacy/: README.md
src/time_to_shop/: __init__.py  __main__.py  cli.py
src/time_to_shop/core/: __init__.py  config.py  constants.py  data_loader.py  pipeline.py
src/time_to_shop/models/: __init__.py  predictor.py
src/time_to_shop/utils/: bigquery_client.py  logger.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_constants.py
